--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,12 @@
-# Blitz Panel Configuration
-# Password for the 'admin' user in Blitz Panel
-BLITZ_ADMIN_PASSWORD=changeme123
-# Secret key for Blitz Panel session security (generate with: openssl rand -hex 32)
-BLITZ_SECRET_KEY=your_blitz_secret_key_here
-
-# Hysteria2 Configuration
-# Password for Hysteria2 protocol authentication (generate with: openssl rand -hex 16)
-HYSTERIA2_PASSWORD=your_hysteria2_password_here
-
 # Domain Configuration
-# The domain name pointing to this server
-DOMAIN=vpn.example.com
+DOMAIN=your-domain.com
 
-# WireGuard Configuration
-# Endpoint address for the office WireGuard server (e.g., office.example.com:51820)
-WIREGUARD_ENDPOINT=office.example.com:51820
-# Public key of the office WireGuard server
-WIREGUARD_PUBLIC_KEY=your_office_wireguard_public_key
+# Blitz Panel Configuration
+BLITZ_ADMIN_PASSWORD=change_me_secure_password
+BLITZ_SECRET_KEY=change_me_secret_key
 
-# Corporate Security
-# Secret token for securing internal API endpoints (X-Corporate-Secret header)
-CORPORATE_SECRET=your_corporate_secret_token
-# Secret token for validating webhooks from HR/external systems
-WEBHOOK_SECRET=your_webhook_secret_token
+# Telegram Bot Configuration
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 
-# Telegram Configuration
-# Bot token from @BotFather
-TELEGRAM_BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrsTUVwxyz
-
-# Database Configuration
-# Path to the SQLite database file inside the container
-DB_PATH=/app/data/users.db
+# Corporate API Configuration
+CORPORATE_SECRET=change_me_corporate_secret
