feat(security): replace hardcoded secrets with secure random generation in setup scripts
refactor(docker): restore full docker stack as default compose configuration

docs: update README with improved deployment instructions and project structure

chore(gitignore): expand patterns to exclude more development artifacts and sensitive files

ci: add GitHub Actions workflow for linting and docker build testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,62 @@
-# Environment variables
-.env
-.env.local
-.env.backup
-
 # Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 venv/
-.pytest_cache/
+env/
+ENV/
 
-# Data directories (sensitive data)
-automation_data/
-blitz_data/
-marzban_data/
-# Exception for setup scripts/configs inside marzban_data if any (though currently mostly generated)
-# but we keep the directory structure if git tracked empty dirs, but usually we just ignore contents.
-# Let's verify if we need to keep anything. The code generates most things.
+# Docker
+.dockerignore
+docker-compose.override.yml
 
-# WireGuard keys
-wireguard/
-*.key
-*.pub
-
-# SSL Certificates
-configs/ssl/
-*.crt
-*.pem
+# Environment Variables
+.env
+.env.*
+!.env.example
 
 # IDEs
 .vscode/
 .idea/
-.trae/
-
-# OS specific
-.DS_Store
-Thumbs.db
+*.swp
+*.swo
 
 # Logs
 *.log
-logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project Specific
+blitz_data/
+automation_data/
+configs/
+!configs/blitz.env
+!configs/*.json
+!configs/*.template.*
+
+# Scripts generated artifacts
+deploy_vps.log
