docs: update configuration files and README
- Add new optional environment variables (WEBHOOK_SECRET, ADMIN_TELEGRAM_IDS)
- Update docker-compose.yml to include new variables
- Expand README with detailed .env variable documentation
- Add new documentation references in README

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,14 @@ DOMAIN=your-domain.com
 # Blitz Panel Configuration
 BLITZ_ADMIN_PASSWORD=change_me_secure_password
 BLITZ_SECRET_KEY=change_me_secret_key
+WEBHOOK_SECRET=optional_webhook_hmac_secret
 
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+ADMIN_TELEGRAM_IDS=123456789,987654321  # comma-separated Telegram user IDs with admin rights
 
 # Corporate API Configuration
 CORPORATE_SECRET=change_me_corporate_secret
+
+# Optional:
+# HYSTERIA2_PORT=443
