refactor(automation): migrate from marzban to blitz client and fix security defaults
- Replace all marzban references with blitz in codebase
- Remove insecure default passwords from docker-compose
- Update .gitignore rules for config files
- Fix database schema inconsistencies (marzban_username -> blitz_username)
- Ensure hy2_auth_key is properly handled in user creation flow

--- a/.gitignore
+++ b/.gitignore
@@ -53,10 +53,8 @@ Thumbs.db
 # Project Specific
 blitz_data/
 automation_data/
-configs/
-!configs/blitz.env
-!configs/*.json
-!configs/*.template.*
+configs/*.local
+configs/*.local.*
 
 # Scripts generated artifacts
 deploy_vps.log
