--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,10 @@ services:
       - "443:443/tcp"
     environment:
       BLITZ_ADMIN_USERNAME: admin
-      BLITZ_ADMIN_PASSWORD: ${BLITZ_ADMIN_PASSWORD:-qwerty123}
-      BLITZ_SECRET_KEY: ${BLITZ_SECRET_KEY:-token123}
+      BLITZ_ADMIN_PASSWORD: ${BLITZ_ADMIN_PASSWORD}
+      BLITZ_SECRET_KEY: ${BLITZ_SECRET_KEY}
       HYSTERIA2_ENABLED: "true"
-      HYSTERIA2_PORT: 443
+      HYSTERIA2_PORT: ${HYSTERIA2_PORT:-443}
       HYSTERIA2_DOMAIN: ${DOMAIN:-h2.quick-vpn.ru}
       # Env vars for entrypoint
       PORT: 8000
@@ -56,7 +56,7 @@ services:
     environment:
       BLITZ_API_URL: http://blitz:8000/api
       BLITZ_ADMIN_USERNAME: admin
-      BLITZ_ADMIN_PASSWORD: ${BLITZ_ADMIN_PASSWORD:-qwerty123}
+      BLITZ_ADMIN_PASSWORD: ${BLITZ_ADMIN_PASSWORD}
       BLITZ_SECRET_KEY: ${BLITZ_SECRET_KEY}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
       ADMIN_TELEGRAM_IDS: ${ADMIN_TELEGRAM_IDS:-}
