feat(logging): implement persistent logging system with rotation
- Add new logger module with file rotation and console output
- Update main.py to use centralized logging configuration
- Add volume mapping in docker-compose.yml for log persistence

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
     volumes:
       - ./automation_data:/app/data
       - ./configs:/app/configs
+      - ./automation_logs:/app/logs
     environment:
       BLITZ_API_URL: http://blitz:8000/api
       BLITZ_ADMIN_USERNAME: admin
