feat(docker): add openssl and enhance supervisor configuration
- Add openssl package to Dockerfile for TLS certificate generation
- Configure supervisor control socket and RPC interface
- Generate self-signed TLS certificates if not present
- Patch config.json placeholders with real cert paths
- Download GeoIP/GeoSite databases if needed
- Ensure supervisor socket path exists

--- a/blitz_docker/supervisord.conf
+++ b/blitz_docker/supervisord.conf
@@ -2,6 +2,16 @@
 nodaemon=true
 user=root
 
+[unix_http_server]
+file=/var/run/supervisor.sock
+chmod=0700
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:webpanel]
 command=python3 /etc/hysteria/core/scripts/webpanel/app.py
 directory=/etc/hysteria/core/scripts/webpanel
